--- a/src/html/welcome.html
+++ b/src/html/welcome.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- FontAwesome 6 -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <title>API Node Demo + Heroku</title>
   </head>
@@ -15,7 +17,7 @@
     <main class="container">
       <div class="row">
         <div class="col-12 vh-100 d-flex flex-column justify-content-center align-items-center">
-          <h1 class="display-1">API Node Demo</h1>
+          <h1 class="display-1">API Demo<i class="fab fa-node"></i></h1>
           <h2 class="display-6">Deploy of node api application with Heroku.</h2>
           <br />
           <a class="btn btn-primary" href="/request-exemple">Request Exemple</a>
