atualização da rota de user update

--- a/src/html/introduction.html
+++ b/src/html/introduction.html
@@ -34,7 +34,7 @@
                 <li><a href="/request-exemple#user-list">Listar Usuários</a></li>
                 <li><a href="/request-exemple#user-consult">Listar uníco usuário</a></li>
                 <li><a href="/request-exemple#user-create-new">Cadastrar usuário</a></li>
-                <li><a href="#">Atualizar usuário</a></li>
+                <li><a href="/request-exemple#user-update">Atualizar usuário</a></li>
               </ul>
             </li>
           </ul>
@@ -360,7 +360,7 @@ object {
           </div>
 
 
-          <div class="row my-5" id="user-create-new">
+          <div class="row my-5" id="user-update">
             <div class="col-7">
               <h5 class="fw-bold">Atualizar dados de usuário</h5>
               <p class="">
