--- a/src/html/introduction.html
+++ b/src/html/introduction.html
@@ -368,7 +368,7 @@ object {
               </p>
               <div class="alert alert-secondary">
                 <span class="badge bg-dark">PUT</span>&nbsp;&nbsp;
-                <code class="text-dark">https://obscure-sierra-39178.herokuapp.com/user/:id/update</code>
+                <code class="text-dark">https://obscure-sierra-39178.herokuapp.com/user/{id}/update</code>
               </div>
 
               <table class="table table-bordered">
